fix alignment in ff

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ Work
   margin-left: -30px;
 }
 
-.next-contact {
+.next-contact:not(*:root) {
   margin-top: -400px;
 }
 
@@ -426,5 +426,6 @@ Mobile
   }
 
 }
+
 
 
